force-app/main/default/objects/Valuation__c/Valuation__c.object-meta.xml
<CustomObject>
    <label>Valuation</label>
    <nameField>
        <displayFormat>VAL-{00000}</displayFormat>
        <label>Valuation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Valuations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>