force-app/main/default/objects/Valuation__c/fields/Bank_Agency__c.field-meta.xml
<CustomField>
    <fullName>Bank_Agency__c</fullName>
    <label>Bank / Agency</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>