force-app/main/default/objects/Valuation__c/fields/Valuation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Amount__c</fullName>
    <label>Valuation Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>