force-app/main/default/objects/Valuation__c/fields/Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Date__c</fullName>
    <label>Valuation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>