force-app/main/default/objects/Valuation__c/validationRules/Valuation_ExpiryDate_After_ValuationDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Valuation_ExpiryDate_After_ValuationDate</fullName>
    <active>true</active>
    <description>This Rule is for checking that expiry date cannot be earlier then Valuation date</description>
    <errorConditionFormula>Valuation_Date__c &gt;  Expiry_Date__c</errorConditionFormula>
    <errorMessage>Expiry Date cannot be earlier than Valuation Date.</errorMessage>
</ValidationRule>